2.1.1/_sources/gallery/misc/keyword_plotting.rst.txt


.. _sphx_glr_gallery_misc_keyword_plotting.py:


======================
Plotting with keywords
======================

There are some instances where you have data in a format that lets you
access particular variables with strings. For example, with
:class:`numpy.recarray` or :class:`pandas.DataFrame`.

Matplotlib allows you provide such an object with the ``data`` keyword
argument. If provided, then you may generate plots with the strings
corresponding to these variables.




.. image:: /gallery/misc/images/sphx_glr_keyword_plotting_001.png
    :align: center





.. code-block:: python


    import numpy as np
    import matplotlib.pyplot as plt
    np.random.seed(19680801)

    data = {'a': np.arange(50),
            'c': np.random.randint(0, 50, 50),
            'd': np.random.randn(50)}
    data['b'] = data['a'] + 10 * np.random.randn(50)
    data['d'] = np.abs(data['d']) * 100

    fig, ax = plt.subplots()
    ax.scatter('a', 'b', c='c', s='d', data=data)
    ax.set(xlabel='entry a', ylabel='entry b')
    plt.show()

**Total running time of the script:** ( 0 minutes  0.017 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: keyword_plotting.py <keyword_plotting.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: keyword_plotting.ipynb <keyword_plotting.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
